<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_this_app_container"
            style="@style/Settings.Container"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/Settings.Divider"
                android:contentDescription="@string/setting_divider_cd"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                style="@style/Settings.Header"
                android:text="@string/setting_about_this_app" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/application_privacy_policy_container"
            style="@style/Settings.Container"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/about_this_app_container"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/Settings.Divider"
                android:contentDescription="@string/setting_divider_cd"
                app:layout_constraintTop_toBottomOf="@id/open_source_software" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/open_source_software"
                style="@style/Settings.Item">

                <ImageView
                    style="@style/Settings.Arrow"
                    android:contentDescription="@string/setting_app_arrow_cd" />

                <TextView
                    style="@style/SolitaireSettings.TextView.NoIcon"
                    android:text="@string/setting_app" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/open_source_software_container"
            style="@style/Settings.Container"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/application_privacy_policy_container"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/Settings.Divider"
                android:contentDescription="@string/setting_divider_cd"
                app:layout_constraintTop_toBottomOf="@id/application_privacy_policy" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/application_privacy_policy"
                style="@style/Settings.Item">

                <ImageView
                    style="@style/Settings.Arrow"
                    android:contentDescription="@string/setting_oss_arrow_cd" />

                <TextView
                    style="@style/SolitaireSettings.TextView.NoIcon"
                    android:text="@string/setting_oss" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_version_container"
            style="@style/Settings.Container"
            app:layout_constraintTop_toBottomOf="@id/open_source_software_container"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/Settings.Divider"
                android:contentDescription="@string/setting_divider_cd"
                app:layout_constraintTop_toBottomOf="@id/app_version" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/app_version"
                style="@style/Settings.Item">

                <TextView
                    android:id="@+id/app_version_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/base_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/SolitaireSettings.TextView.NoIcon"
                    android:text="@string/setting_app_version" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/question_container"
            style="@style/Settings.Container"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/app_version_container"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/Settings.Divider"
                android:contentDescription="@string/setting_divider_cd"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                style="@style/Settings.Header"
                android:text="@string/setting_question_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/question_here_container"
            style="@style/Settings.Container"
            app:layout_constraintTop_toBottomOf="@id/question_container"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/Settings.Divider"
                android:contentDescription="@string/setting_divider_cd"
                app:layout_constraintTop_toBottomOf="@id/question" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/question"
                style="@style/Settings.Item"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/question_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/setting_info_cd"
                    android:src="@drawable/ic_baseline_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    style="@style/Settings.Arrow"
                    android:contentDescription="@string/setting_question_arrow_cd" />

                <TextView
                    style="@style/Settings.TextView"
                    android:text="@string/setting_question"
                    app:layout_constraintStart_toEndOf="@id/question_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="io.github.kurramkurram.template.viewmodel.SettingsViewModel" />
    </data>
</layout>
